// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render ExpenseSummary with 1 expense 1`] = `
<div
  className="page_header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
       Viewing 
      <span>
         
        1
         
      </span>
       
      expense
       totalling 
      <span>
        $2.35
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
         Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`Should correctly render ExpenseSummary with multiple expense 1`] = `
<div
  className="page_header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
       Viewing 
      <span>
         
        10
         
      </span>
       
      expenses
       totalling 
      <span>
        $25,666.65
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
         Add Expense
      </Link>
    </div>
  </div>
</div>
`;
